@startuml ServerImplementation
!theme plain
skinparam packageStyle rectangle

package "Network" {
  class "ServerBase" {
    -_stop_requested: atomic<bool>
    -_acceptor: tcp::acceptor
    -_host: string
    -_port: uint16_t
    -_io_ctx: io_context&
    -_handler: ClientHandler
    -_ssl_context: shared_ptr<ssl::context>
    +ServerBase(port, io_ctx, handler)
    +host(): string_view
    +port(): uint16_t
    +getIoContext(): io_context&
    +getSslContext(): shared_ptr<ssl::context>
    +stop(): void
    +isStopped(): bool
    +clientHandler(): ClientHandler
  }

  class "ServerSync" {
    <<interface>>
    +listen(): expected<void, error_code>
    +listenTls(): expected<void, error_code>
  }

  class "ServerAsync" {
    <<interface>>
    +asyncListen(): awaitable<expected<void, error_code>>
    +asyncListenTls(): awaitable<expected<void, error_code>>
  }

  class "Server" {
    +Server(port, io_ctx, handler)
    +listen(): expected<void, error_code>
    +listenTls(): expected<void, error_code>
    +asyncListen(): awaitable<expected<void, error_code>>
    +asyncListenTls(): awaitable<expected<void, error_code>>
    +stop(): void
  }

  interface "DualSocket" as DualSocket_IF

  note right of ClientHandler
    std::function<void(std::unique_ptr<DualSocket>)>
  end note

  ServerBase <|-- Server : common state impl
  ServerSync <|-- Server : sync ops
  ServerAsync <|-- Server : async ops
  Server --> DualSocket_IF : handler payload
}
@enduml